--- a/blogapp/blogapp/src/main/webapp/login.html
+++ b/blogapp/blogapp/src/main/webapp/login.html
@@ -16,6 +16,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
             <input type="password" id="pwd" placeholder="password"/>
             <button id="btnLogin">Login</button>
         </form>
+        <ul id="users">
+        </ul>
     </body>
     <script src="login.js"></script>
 </html>
