--- a/blogapp-fr/src/login.html
+++ b/blogapp-fr/src/login.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit this template
--->
 <html>
     <head>
         <title>Blogapp Login</title>
@@ -10,7 +6,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Blogapp Login</h1>
+        <h1>Blogapp Login page</h1>
         <form>
             <input type="text" id="usr" placeholder="username..." />
             <input type="password" id="pwd" placeholder="password"/>
